2010-03-16  Max Horn <max@quendi.de>

	* Fix up indention in several *.pm files

2010-02-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Newline before msg that may be emitted during
	progressbar display

2010-01-09  David Fang  <fangism@users.sourceforge.net>

	* PkgVersion.pm: compiler_wrapper finds %p/bin for ccache-default

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: easier/clearer control of env vars propagated over
	sudo

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* all: update copyright

2009-11-23  Augusto Devegili  <monipol@users.sourceforge.net>

	* Configure.pm: Comsetics
	* PkgVersion.pm: Call $config-param() only once and warn user if
	MaxBuildJobs is not a positive integer

2009-11-21  Augusto Devegili  <monipol@users.sourceforge.net>

	* PkgVersion.pm: Handle the Commercial licence

2009-11-11  Augusto Devegili  <monipol@users.sourceforge.net>

	* Configure.pm: Accept only positive integers for MaxBuildJobs, and loop
	while input is not valid
	* PkgVersion.pm: Set -j only if MaxBuildJobs > 1

2009-11-11  Augusto Devegili  <monipol@users.sourceforge.net>

	* Configure.pm, PkgVersion.pm, Validation.pm: New MaxBuildJobs fink.conf
	entry and UseMaxBuildJobs package description field as an opt-in for
	MAKEFLAGS += -j

2009-11-09  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm: Support OS X 10.6.2

2009-10-31  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix cleanup_debs to use "current arch" in .deb
	filename instead of _ delimiter.

2009-10-18  Augusto Devegili <monipol@users.sourceforge.net>

	* PkgVersion.pm: Fix comment typos

2009-10-17  Augusto Devegili <monipol@users.sourceforge.net>

	* VirtPackage.pm: Slightly faster 64-bit CPU detection

2009-10-17  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: don't test ALL executables of the form /usr/bin/gcc*,
	only the ones we need

2009-09-27  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Support OS X 10.6.1
