@@ -58,12 +58,12 @@ file types.
   my $md5 = $checksum->get_checksum($filename);
 
 
-  ### a module implementing a notifier type
+  ### a module implementing a checksum type
 
-  # all notifier modules must reside under the Fink::Checksum namespace
+  # all checksum modules must reside under the Fink::Checksum namespace
   package Fink::Checksum::ChecksumClass;
 
-  # all notifier modules must be subclasses of Fink::Checksum
+  # all checksum modules must be subclasses of Fink::Checksum
   use Fink::Checksum;
   @ISA = qw(Fink::Checksum);
 
